create dynamic pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, "Home") %>
-
+<% provide(:title, "About") %>
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,6 +6,6 @@
     </head>
     <body>
         <h1>Sample App</h1>
-        <p>This is the home page</p>
+        <p>This is the about page</p>
     </body>
 </html>
