--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,11 +1,9 @@
 <% provide(:title, "Help") %>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
-    </head>
-    <body>
-        <h1>Sample App</h1>
-        <p>This is the help page</p>
-    </body>
-</html>
+
+<h1>Sample App</h1>
+<p>This is the help page</p>
+<p>
+    The help page for the
+    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+</p>
