--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,98 @@
  * Consider organizing styles into separate files for maintainability.
  */
 @import "bootstrap";
+
+
+body {
+    padding-top: 60px;
+}
+
+section {
+    overflow: auto;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.center {
+    text-align: center;
+
+    h1 {
+        margin-bottom: 10px;
+    }
+}
+
+/* typogra[hy */
+
+h1 h2 h3 h4 h5 h6 {
+    line-height: 1;
+}
+
+h1 {
+    font-size: 1.2rem;
+    letter-spacing: -10x;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: normal;
+    color: #fff;
+}
+
+p {
+    font-size: 1.1em;
+    line-height: 1.7em;
+}
+
+/* header */
+
+#logo {
+    float: left;
+    margin-right: 10px;
+    font-size: 1.7 rem;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+
+    &:hover {
+        color: #fff;
+        text-decoration: none;
+    }
+}
+
+img {
+    display: none;
+}
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+
+    a {
+        color: #555;
+
+        &:hover {
+            color: #222;
+        }
+    }
+
+    small {
+        float: left;
+    }
+
+    ul {
+        float: right;
+        list-style: none;
+
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
+
+
+
+}
