modify and add pages

--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, "Help") %>
-
-<h1>Help</h1>
+<% provide(:title, "Login") %>
+<h1>Login</h1>
 <p>
-    The help page for the
+    The login page for the
     <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
 </p>
