--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,6 @@
  */
 @import "bootstrap";
 
-
-body {
-    padding-top: 60px;
-}
-
 section {
     overflow: auto;
 }
@@ -38,12 +33,18 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 h1 {
-    font-size: 1.2rem;
+    font-size: 3em;
+    letter-spacing: -2x;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+h2 {
+    font-size: 1.2em;
     letter-spacing: -10x;
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #fff;
 }
 
 p {
@@ -57,7 +58,7 @@ p {
     float: left;
     margin-right: 10px;
     font-size: 1.7 rem;
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding-top: 9px;
