--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, "About") %>
 
-<h1>Sample App</h1>
-<p>This is the about page</p>
+<h1>About</h1>
 <p>
     The about page for the
     <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
