--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, "Help") %>
-
-<h1>Help</h1>
+<% provide(:title, "Contact") %>
+<h1>Contact</h1>
 <p>
-    The help page for the
+    The contact page for the
     <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
 </p>
